черновик маршрута и проверка авторизации по токену, ок
